syntax = "proto3";

package comment.service.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "pagination/pagination.proto";

option go_package = "kratos-blog/api/comment/service/v1;v1";

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。

service CommentService {
  // 获取评论列表
  rpc ListComment (pagination.PagingRequest) returns (ListCommentResponse) {
    option (google.api.http) = {
      get: "/blog/v1/comments"
    };
  }

  // 获取评论数据
  rpc GetComment (GetCommentRequest) returns (Comment) {
    option (google.api.http) = {
      get: "/blog/v1/comments/{id}"
    };
  }

  // 创建评论
  rpc CreateComment (CreateCommentRequest) returns (Comment) {
    option (google.api.http) = {
      post: "/blog/v1/comments"
      body: "*"
    };
  }

  // 更新评论
  rpc UpdateComment (UpdateCommentRequest) returns (Comment) {
    option (google.api.http) = {
      put: "/blog/v1/comments/{id}"
      body: "comment"
    };
  }

  // 删除评论
  rpc DeleteComment (DeleteCommentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/blog/v1/comments/{id}"
    };
  }
}

message Comment {
  uint32 id = 1;
  optional string author = 2;
  optional string email = 3;
  optional string ipAddress = 4;
  optional string authorUrl = 5;
  optional string gravatarMd5 = 6;
  optional string content = 7;
  optional uint32 status = 8;
  optional string userAgent = 9;
  optional uint32 parentId = 10;
  optional bool isAdmin = 11;
  optional bool allowNotification = 12;
  optional string avatar = 13;
  optional string createTime = 14;
  optional string updateTime = 15;
}

// 回应 - 评论列表
message ListCommentResponse {
  repeated Comment items = 1;
  int32 total = 2;
}

// 请求 - 评论数据
message GetCommentRequest {
  uint32 id = 1;
}

// 请求 - 创建评论
message CreateCommentRequest {
  Comment comment = 1;
  optional uint32 operatorId = 2;
}

// 请求 - 更新评论
message UpdateCommentRequest {
  uint32 id = 1;
  Comment comment = 2;
  optional uint32 operatorId = 3;
}

// 请求 - 删除评论
message DeleteCommentRequest {
  uint32 id = 1;
  optional uint32 operatorId = 2;
}
